--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
-PROJECT(petra)
+PROJECT(osm-routing-bgl)
 
 SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
 
@@ -9,11 +9,8 @@ INCLUDE(OsmiumOptions)
 FIND_PACKAGE(Boost 1.38)
 FIND_PACKAGE(Osmium COMPONENTS io)
 
-ADD_EXECUTABLE(${PROJECT_NAME} "osm-routing-bgl.cpp")
-
-SET_TARGET_PROPERTIES(${PROJECT_NAME}
-    PROPERTIES RUNTIME_OUTPUT_DIRECTORY
-    ${PROJECT_SOURCE_DIR}/dist
+INCLUDE_DIRECTORIES(
+    ${PROJECT_SOURCE_DIR}/include
 )
 
-TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OSMIUM_LIBRARIES})
+ADD_SUBDIRECTORY(src)
